Prevent date labels wrap between week day and date

--- a/src/main/jquery.continuousCalendar.css
+++ b/src/main/jquery.continuousCalendar.css
@@ -8,6 +8,8 @@
 .continuousCalendarContainer div.label { margin-left: 7px; margin-bottom: 2px; display: inline; }
 .continuousCalendarContainer div.label span.clickable { cursor: pointer; text-decoration: underline; }
 .continuousCalendarContainer div.label.clear { margin-right: 7px; float: right; }
+.continuousCalendarContainer .startDateLabel,
+.continuousCalendarContainer .endDateLabel { white-space: nowrap; }
 .continuousCalendarContainer .popUpContainer { width: 1px; height: 1px; position: relative; clear: both; }
 .continuousCalendarContainer .continuousCalendar { clear: both; }
 .continuousCalendarContainer .continuousCalendar .tinyscrollbar .viewport { overflow: hidden; position: relative; }
